--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,19 @@ html.dark {
 .borderBlack {
   @apply border border-black/10;
 }
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #59ade5; /* Change this to your desired color */
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  z-index: -1;
+}
 * {
   margin: 0;
   padding: 0;
